# DocMind

./: README.md  docmind-example-local.yaml  docmind.yaml.example  pyproject.toml  test_cache.py  test_cache2.py  test_embedding.py
docmind/: __init__.py  cli.py  config.py
docmind/analyzer/: __init__.py  extractor.py  metadata.py  parser.py
docmind/embedder/: __init__.py  encoder.py  splitter.py
docmind/generator/: __init__.py  dev_guide.py  mermaid.py  outline.py  prompts.py  requirements.py  user_guide.py
docmind/llm/: __init__.py  client.py
docmind/output/: __init__.py  writer.py
docmind/retriever/: __init__.py  cache.py  index.py  search.py
docmind/utils/: __init__.py  logger.py  progress.py
docs/plans/: 2026-03-16-docmind-design.md
tests/: __init__.py  test_analyzer.py  test_config.py  test_embedder.py  test_generator.py  test_output.py
